--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -48,6 +48,15 @@ tools:context=".home.HomeActivity">
 
     </android.support.v7.widget.RecyclerView>
 
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fab"
+        android:layout_above="@id/navigationView"
+        android:layout_alignEnd="@id/navigationView"
+        android:src="@drawable/ic_add_black_24dp"
+        android:layout_margin="16dp"/>
+
     <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
         android:id="@+id/navigationView"
         android:layout_width="wrap_content"
