--- a/app/src/main/res/layout/recyclerview_exerciseset.xml
+++ b/app/src/main/res/layout/recyclerview_exerciseset.xml
@@ -29,7 +29,7 @@
             android:text="@string/hint_exercise_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="#DE000000"
-            android:textSize="20dp" />
+            android:textSize="25dp" />
 
 
 
@@ -43,8 +43,64 @@
             android:text="@string/hint_set"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="#DE000000"
-            android:textSize="15dp"
+            android:textSize="20dp"
             app:layout_constraintTop_toBottomOf="@id/title_exercise_name" />
+
+        <TextView
+            android:id="@+id/title_volume_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/hint_volume"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textColor="#DE000000"
+            android:textSize="15dp"
+            app:layout_constraintTop_toBottomOf="@id/title_exercise_name"
+            app:layout_constraintRight_toLeftOf="@id/title_volume"/>
+
+        <TextView
+            android:id="@+id/title_volume"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/volume"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textColor="#DE000000"
+            android:textSize="15dp"
+            app:layout_constraintTop_toBottomOf="@id/title_exercise_name"
+            app:layout_constraintEnd_toEndOf="@id/cardView"/>
+
+        <TextView
+            android:id="@+id/title_1rm_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/est_1rm"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textColor="#DE000000"
+            android:textSize="15dp"
+            app:layout_constraintTop_toBottomOf="@id/title_volume"
+            app:layout_constraintRight_toLeftOf="@id/title_1rm"/>
+
+        <TextView
+            android:id="@+id/title_1rm"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="16dp"
+            android:text="@string/_1rm"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textColor="#DE000000"
+            android:textSize="15dp"
+            app:layout_constraintTop_toBottomOf="@id/title_volume"
+            app:layout_constraintEnd_toEndOf="@id/cardView"/>
 
 
 
