--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -6,12 +6,23 @@ android:layout_width="match_parent"
 android:layout_height="match_parent" android:background="@color/colorPrimary"
 tools:context=".home.HomeActivity">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/stats_toolbar"
+        android:background="@color/colorPrimaryDark">
+
+        <include layout="@layout/layout_stats_toolbar"/>
+
+    </android.support.design.widget.AppBarLayout>
+
     <!-- Middle section (body) -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
         android:layout_above="@id/navigationView"
+        android:layout_below="@+id/stats_toolbar"
         android:id="@+id/relLayout">
 
         <include layout="@layout/layout_center_viewpager"/>
@@ -19,20 +30,16 @@ tools:context=".home.HomeActivity">
 
     </RelativeLayout>
 
-    <!--<FrameLayout-->
-        <!--android:id="@+id/container"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_above="@id/navigationView"-->
-        <!--android:background="@color/white"-->
-        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_below="@+id/stats_toolbar"
+        android:id="@+id/rvStatsHome"
+        android:padding="5dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Stats"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"/>
+    </android.support.v7.widget.RecyclerView>
+
 
     <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
         android:id="@+id/navigationView"
