History now working. Plus home activity and history now showing recyclerviews in reverse order

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -33,7 +33,7 @@ tools:context=".home.HomeActivity">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_below="@+id/log_toolbar"
         android:id="@+id/rvLogItem"
