Line chart for 1rm now working, need to clean up toolbars and then copy the class for volume

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -36,6 +36,7 @@ tools:context=".home.HomeActivity">
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_below="@+id/log_toolbar"
+        android:layout_above="@id/navigationView"
         android:id="@+id/rvLogItem"
         android:padding="5dp">
 
