--- a/app/src/main/res/layout/activity_stats_bodyweight.xml
+++ b/app/src/main/res/layout/activity_stats_bodyweight.xml
@@ -9,10 +9,10 @@ tools:context=".home.HomeActivity">
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/log_toolbar"
+        android:id="@+id/stats_toolbar"
         android:background="@color/colorPrimaryDark">
 
-        <include layout="@layout/layout_log_toolbar"/>
+        <include layout="@layout/layout_stats_bodyweight_toolbar"/>
 
     </android.support.design.widget.AppBarLayout>
 
@@ -22,7 +22,7 @@ tools:context=".home.HomeActivity">
         android:layout_height="match_parent"
         android:background="@color/white"
         android:layout_above="@id/navigationView"
-        android:layout_below="@+id/log_toolbar"
+        android:layout_below="@+id/stats_toolbar"
         android:id="@+id/relLayout">
 
         <include layout="@layout/layout_center_viewpager"/>
@@ -30,25 +30,16 @@ tools:context=".home.HomeActivity">
 
     </RelativeLayout>
 
-
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_below="@+id/log_toolbar"
-        android:id="@+id/rvLogItem"
+        android:layout_below="@+id/stats_toolbar"
+        android:id="@+id/rvStatsHome"
         android:padding="5dp">
 
     </android.support.v7.widget.RecyclerView>
 
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/fab"
-        android:layout_above="@id/navigationView"
-        android:layout_alignEnd="@id/navigationView"
-        android:src="@drawable/ic_add_black_24dp"
-        android:layout_margin="16dp"/>
 
     <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
         android:id="@+id/navigationView"
