--- a/app/src/main/res/layout/activity_stats_muscles.xml
+++ b/app/src/main/res/layout/activity_stats_muscles.xml
@@ -6,10 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".stats.StatsMusclesActivity">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/stats_toolbar"
+        android:background="@color/colorPrimaryDark">
+
+        <include layout="@layout/layout_stats_muscles_toolbar"/>
+
+    </android.support.design.widget.AppBarLayout>
+
     <com.github.mikephil.charting.charts.PieChart
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/PieChart">
+        android:id="@+id/PieChart"
+        android:layout_below="@+id/stats_toolbar">
     </com.github.mikephil.charting.charts.PieChart>
 
 </RelativeLayout>
