--- a/app/src/main/res/layout/activity_routines.xml
+++ b/app/src/main/res/layout/activity_routines.xml
@@ -6,12 +6,23 @@ android:layout_width="match_parent"
 android:layout_height="match_parent" android:background="@color/colorPrimary"
 tools:context=".home.HomeActivity">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/routines_toolbar"
+        android:background="@color/colorPrimaryDark">
+
+        <include layout="@layout/layout_routines_toolbar"/>
+
+    </android.support.design.widget.AppBarLayout>
+
     <!-- Middle section (body) -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
         android:layout_above="@id/navigationView"
+        android:layout_below="@+id/routines_toolbar"
         android:id="@+id/relLayout">
 
         <include layout="@layout/layout_center_viewpager"/>
@@ -19,20 +30,24 @@ tools:context=".home.HomeActivity">
 
     </RelativeLayout>
 
-    <!--<FrameLayout-->
-        <!--android:id="@+id/container"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_above="@id/navigationView"-->
-        <!--android:background="@color/white"-->
-        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_below="@+id/routines_toolbar"
+        android:id="@+id/rvRoutinesHome"
+        android:padding="5dp">
 
-    <TextView
+    </android.support.v7.widget.RecyclerView>
+
+    <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Routines"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"/>
+        android:id="@+id/fab"
+        android:layout_above="@id/navigationView"
+        android:layout_alignEnd="@id/navigationView"
+        android:src="@drawable/ic_add_black_24dp"
+        android:layout_margin="16dp"/>
 
     <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
         android:id="@+id/navigationView"
