--- a/app/src/main/res/layout/activity_routine_exercise_log_list.xml
+++ b/app/src/main/res/layout/activity_routine_exercise_log_list.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark">
 
-        <include layout="@layout/layout_routine_workout_toolbar"/>
+        <include layout="@layout/layout_routine2_workout_toolbar"/>
 
     </android.support.design.widget.AppBarLayout>
 
@@ -41,7 +41,7 @@
 
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvRoutineLog"
+        android:id="@+id/rvExerciseLog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -50,29 +50,21 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@+id/rvRoutineLog"
-        android:id="@+id/rvLogItem"
-        android:padding="5dp"
-        android:visibility="gone">
 
-    </android.support.v7.widget.RecyclerView>
 
-    <Button
-        android:id="@+id/add_exercise_button"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginTop="30dp"
-        android:padding="10dp"
-        android:background="#555"
-        android:layout_gravity="center"
-        android:textColor="#FFF"
-        android:backgroundTint="@color/colorPrimary"
-        android:text="Add Exercise"
-        android:paddingLeft="5dp"/>
+
+    <!--<Button-->
+        <!--android:id="@+id/add_exercise_button"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="40dp"-->
+        <!--android:layout_marginTop="30dp"-->
+        <!--android:padding="10dp"-->
+        <!--android:background="#555"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:textColor="#FFF"-->
+        <!--android:backgroundTint="@color/colorPrimary"-->
+        <!--android:text="Add Exercise"-->
+        <!--android:paddingLeft="5dp"/>-->
 
 
 
