Correct label positioning and date format now showing on bodyweight and body measurement charts

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="white">#FFFFFF</color>
     <color name="lightGrey">#F9F9F9</color>
+    <color name="lightRed">#FF8282</color>
 </resources>
