--- a/app/src/main/res/layout/activity_exercise_log_list.xml
+++ b/app/src/main/res/layout/activity_exercise_log_list.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/ell"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".MainActivity">
@@ -11,6 +12,7 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/toolbar"
         android:background="@color/colorPrimaryDark">
 
         <include layout="@layout/layout_workout_toolbar"/>
@@ -21,6 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_below="@+id/toolbar"
+        android:id="@+id/editTextLayout"
         android:background="@color/lightGrey">
 
         <EditText
@@ -44,25 +48,23 @@
         android:id="@+id/rvExerciseLog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/editTextLayout"
         android:orientation="vertical"
         android:padding="10dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     </android.support.v7.widget.RecyclerView>
 
-    <Button
-        android:id="@+id/add_exercise_button"
+
+    <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginTop="30dp"
-        android:padding="10dp"
-        android:background="#555"
-        android:layout_gravity="center"
-        android:textColor="#FFF"
-        android:backgroundTint="@color/colorPrimary"
-        android:text="Add Exercise"
-        android:paddingLeft="5dp"/>
+        android:layout_height="wrap_content"
+        android:id="@+id/fab"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/toolbar"
+        android:src="@drawable/ic_add_black_24dp"
+        android:layout_margin="16dp"/>
 
 
 
-</LinearLayout>
+</RelativeLayout>
