--- a/app/src/main/res/layout/layout_exercise_toolbar.xml
+++ b/app/src/main/res/layout/layout_exercise_toolbar.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="80"
         android:id="@+id/note_exercise_title"
-        android:text="Exercise Title"
+        android:text="@string/new_exercise"
         android:textColor="#000"
         android:layout_marginStart="15dp"
         android:textSize="23sp" />
