--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="white">#FFFFFF</color>
     <color name="lightGrey">#F9F9F9</color>
+    <color name="lightGreyer">#e2e2e2</color>
     <color name="lightRed">#FF8282</color>
+    <color name="black">#000000</color>
 </resources>
