--- a/app/src/main/res/layout/recyclerview_exerciseset.xml
+++ b/app/src/main/res/layout/recyclerview_exerciseset.xml
@@ -26,10 +26,11 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
+            android:paddingLeft="10dp"
             android:text="@string/hint_exercise_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textColor="#DE000000"
-            android:textSize="20dp" />
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="23dp" />
 
         <TextView
             android:id="@+id/set_timestamp"
@@ -52,6 +53,9 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:text="@string/hint_set"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="#DE000000"
@@ -65,9 +69,10 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
+            android:padding="3dp"
             android:text="@string/hint_volume"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textColor="#DE000000"
+            android:textColor="@color/colorPrimary"
             android:textSize="15dp"
             app:layout_constraintTop_toBottomOf="@id/title_exercise_name"
             app:layout_constraintRight_toLeftOf="@id/title_volume"/>
@@ -79,6 +84,7 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
+            android:padding="3dp"
             android:text="@string/volume"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="#DE000000"
@@ -93,9 +99,10 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
+            android:padding="3dp"
             android:text="@string/est_1rm"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textColor="#DE000000"
+            android:textColor="@color/colorPrimary"
             android:textSize="15dp"
             app:layout_constraintTop_toBottomOf="@id/title_volume"
             app:layout_constraintRight_toLeftOf="@id/title_1rm"/>
@@ -107,6 +114,7 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
+            android:padding="3dp"
             android:text="@string/_1rm"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="#DE000000"
